[tool.poetry]
name = "global-chat"
version = "0.1.0"
description = "global-chat project"
authors = ["창민 <ckd29672@naver.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "global_chat"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
uvicorn = "^0.20.0"
sqlalchemy = "^2.0.2"
beanie = "^1.17.0"
dependency-injector = "^4.41.0"
pymysql = "^1.0.2"
alembic = "^1.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"
isort = "^5.12.0"
black = "^23.1.0"
mypy = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
